Add more fonts, Update work experience

--- a/src/styles/common/common.fonts.scss
+++ b/src/styles/common/common.fonts.scss
@@ -17,3 +17,18 @@
   font-family: "Montserrat-Regular";
   src: url(../../assets/fonts/Montserrat-Regular.ttf) format("opentype");
 }
+
+@font-face {
+  font-family: "Montserrat-Medium";
+  src: url(../../assets/fonts/Montserrat-Medium.ttf) format("opentype");
+}
+
+@font-face {
+  font-family: "Montserrat-MediumItalic";
+  src: url(../../assets/fonts/Montserrat-MediumItalic.ttf) format("opentype");
+}
+
+@font-face {
+  font-family: "Montserrat-Italic";
+  src: url(../../assets/fonts/Montserrat-Italic.ttf) format("opentype");
+}
