--- a/src/styles/common/common.base.scss
+++ b/src/styles/common/common.base.scss
@@ -14,6 +14,17 @@
   font-family: "Montserrat-Bold";
 }
 
+.font-montserrat-medium {
+  font-family: "Montserrat-Medium";
+}
+
+.font-montserrat-medium-italic {
+  font-family: "Montserrat-MediumItalic";
+}
+
+.font-montserrat-italic {
+  font-family: "Montserrat-Italic";
+}
 
 .font-size-12 {
   font-size: 12px;
