--- a/src/styles/common/common.base.scss
+++ b/src/styles/common/common.base.scss
@@ -14,6 +14,10 @@
   font-family: "Montserrat-Bold";
 }
 
+.font-montserrat-semi-bold {
+  font-family: "Montserrat-SemiBold";
+}
+
 .font-montserrat-medium {
   font-family: "Montserrat-Medium";
 }
