--- a/src/styles/common/common.fonts.scss
+++ b/src/styles/common/common.fonts.scss
@@ -9,6 +9,11 @@
 }
 
 @font-face {
+  font-family: "Montserrat-SemiBold";
+  src: url(../../assets/fonts/Montserrat-SemiBold.ttf) format("opentype");
+}
+
+@font-face {
   font-family: "Montserrat-Bold";
   src: url(../../assets/fonts/Montserrat-Bold.ttf) format("opentype");
 }
